--- a/src/components/style.css
+++ b/src/components/style.css
@@ -4,7 +4,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    /* height: 100vh; */
+    margin-bottom: 20px;
 }
 
 .btns {
@@ -15,12 +16,29 @@
 .products {
     display: flex;
     gap: 10px;
-    flex-direction: column;
     align-items: center;
     padding: 10px;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .products__list {
     display: flex;
-    flex-wrap: wrap;
+    align-items: center;
+    padding: 20px;
+    gap: 10px;
+}
+
+.img__wrap {
+    width: 150px;
+    height: 150px;
+}
+
+img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
+}
+
+.products__wrap {
 }
